+Date picker +active packages card change in travel care packages screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   country_code_picker: ^1.7.0
   pin_code_fields: ^6.0.1
   mask_text_input_formatter: ^1.2.1
+  modal_bottom_sheet: ^1.0.0+1
   
 
 
