--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   modal_bottom_sheet: ^1.0.0+1
   sliding_up_panel: ^1.0.2
   toggle_switch: ^0.1.8
+  google_maps_flutter: ^1.0.10
+  
   
 
 
