--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,6 +34,7 @@ android {
 
     lintOptions {
         disable 'InvalidPackage'
+        checkReleaseBuilds false // Add this line
     }
 
     defaultConfig {
@@ -50,6 +51,8 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+            shrinkResources false // Add this line
+            minifyEnabled false // Add this line
         }
     }
 }
